--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
                 <a class="nav-link" href="/lab2">Lab 2</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/third-lab">Lab 3</a>
+                <a class="nav-link" href="/lab3">Lab 3</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/fourth-lab">Lab 4</a>
