--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="/lab3">Lab 3</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/fourth-lab">Lab 4</a>
+                <a class="nav-link" href="/lab4">Lab 4</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/fifth-lab">Lab 5</a>
