--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/lab2">Lab 2</a>
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="/lab4">Lab 4</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/fifth-lab">Lab 5</a>
+                <a class="nav-link" href="/lab5">Lab 5</a>
             </li>
         </ul>
     </div>
